main.css
body{
    background: rgb(255, 255, 255);
    margin:0;
    padding:0;

    font-family: 'Roboto', sans-serif;
}



.hamburger{
  display: none;
}
.toggle{
  display: none;
}


header{
  z-index: 10;
  position: fixed;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #181818;
  width: 100vw;
  
}

.logo{
  display: flex;
  margin-left: 60px;
}
.logo h1{
  font-size: 48px;
  font-weight: 800;
  margin: 10px 0px;
}
.logo img{
  width: 80px;
}

nav{
  position: fixed;
  margin-right: 80px;
  right: 10px;
}

nav > div{
  display: flex;
  align-items: center;
}

nav a{
  margin: 0px 28px;
  font-weight: lighter;
  font-size: 20px;
  text-decoration: none;
  color: rgb(226, 226, 226);
}
a:hover{
  transition: 200ms;
  color: #7c7c7c;
}

.icon{
  width:30px;
  display: inline-block;
  filter: invert();
}

.link:hover{
    filter: brightness(0.6);
}


.header{
  background-color: #181818;
  color: rgb(255, 255, 255);
}

.header h3{
    color: rgb(255, 255, 255);
}

.header-content{
  display: flex;
  justify-content: space-between;
  padding:26vh 0px;
}


.header-content h1{
  font-weight: normal;
  font-size: 80px;
}
.header-content h3{
  font-weight: lighter;
  font-size: 40px;
  color: rgb(255, 255, 255);
}

.header-button{
  display: inline-block;
  margin-top: 40px;
  text-decoration: none;
  background:#358DDF ;
  color: white;
  font-weight: lighter;
  font-size: 20px;
  border-radius: 3%;
  padding: 16px 28px;
  transition-property:background;
    
}
.header-button:hover{
  color: white;
  background:#205485 ;
  transition-duration: 200ms;
   
}


svg{
  width: 600px;
}

#box{
  animation: box 2000ms ease;
  animation-fill-mode: forwards;
}
@keyframes box{
  0%{
    transform: translateX(0px);
  }
  50%{
    transform: translateX(0px);
  }
  75%{
    transform: translateX(-30px);
  }
  100%{
    transform: translate(-30px, -56px);
    
  }
}

.content-right img{
  width: 540px;
}

#text{
  animation: text 4000ms ease;
  animation-fill-mode: forwards;
}
@keyframes text{
  0%{
    transform: translateX(208px);
  }
  60%{
    transform: translateX(208px);
  }
  100%{
    transform: translateX(0);
  }
}


.grid{
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  background:rgb(255, 255, 255);
  padding: 0px 0px;
  gap: 80px;
  margin-top: 120px;
}

.projects-header{
  background: #2B75BA;
  padding: 35px 120px;
}
.projects-header h1, p, a{
  color:white;
  margin: 0px;
  padding: 12px 0px;
}

.project{
  text-align: center;
}
.project  h3, p, a{
  color: rgba(128, 128, 128, 0);
  font-weight: normal;
}
.skills a{
  color: rgba(255, 0, 0, 0);
}
.project h3{
  font-size: 30px;
}
.project > div{
  position: relative;
}

.project-content{
  display: inline-block;
  position: absolute;
  top: 0px;
  left: 0px;
  text-align: center;
  width: 100%;
  height: 100%;
  padding: 40px;
}
.project-content:hover{
  transition-duration: 200ms;
  background: rgba(0, 0, 0, 0.822);
}
.project-content:hover h3, a{
  color: rgb(255, 255, 255);
}
.project-content:hover a{
  transition-duration: 200ms;
  background:rgb(94, 94, 94);
  color: rgb(255, 255, 255);
}

.skills{
  margin-bottom: 0px;
  margin-top:0px;
  margin-left: 0px;
  margin-right: 0px;
}
.skills a{
  margin-bottom: 10px;
  display: inline-block;
  font-size: 80%;
  width: 45px;
  line-height: 2px;
  margin-right: 3px;
  border-radius: 40%;
}

.project img{
  width: 100%;
}
.demo{
  display: inline-block;
  text-decoration: none;
  border: none;
  background: #2B75BA;
  padding: 10px 20px;
  margin: 6px;
  margin-top: 8px;
  color:white;
  border-radius: 12px;
}
.code{
  display: inline-block;
  text-decoration: none;
  border: none;
  background: white;
  padding: 10px 20px;
  margin: 6px;
  margin-top: 8px;
  color:#292929;
  border: #696969 2px solid;
  border-radius: 12px;
}

.demo:hover{
  background: #163d61;
  color: white;
}
.code:hover{
  background: #696969;
  color: white;
}

.about{
    grid-column-start: 1;
    grid-column-end: 3;
    padding: 20px 40px;
    text-align: center;
}

.contact{
  background-image: url("contact.svg");
  background-repeat: no-repeat;
  background-size: 100vw;
  background-position: 0px 80px;

  display: grid;
  gap: 120px;
  grid-template-columns: 1fr 1fr;
  margin-top: 0px;
  padding-bottom: 40px;

  padding-left:4%;
  padding-right:4%;

  padding-top: 340px;
  padding-bottom: 200px;

  color: rgb(255, 255, 255);

}
.contact p{
  color: rgb(255, 255, 255);
}
.contact-text{
  padding:0px 20px;
}
.contact h2{
    padding-top: 30px;
}
.form{
  padding:0px 20px;
  width: 100%;
  max-width: 600px;
}
.form p{
  line-height: 0.9;
}
.email{
  display: block;
  padding: 6px;
}
input:focus{
  border:none;
  outline: none !important;
}

textarea{
  border:solid rgba(128, 128, 128, 0.726) 1px;
  padding: 12px 8px;
  width:100%
}
textarea:focus{
  border:1px solid rgb(59, 134, 172);
  outline: none !important;
  box-shadow: 0 0 4px rgb(59, 134, 172);
  transition-duration: 240ms;
}

input[type=email]{
  border:solid rgba(128, 128, 128, 0.726) 1px;
  border-radius: 2px;
  padding: 12px 8px;
  width:100%
}
input[type=email]:focus{
  transition-duration: 240ms;
  border:1px solid rgb(59, 134, 172);
  box-shadow: 0 0 4px rgb(59, 134, 172);
  border-radius: 3px;
  width:100%
}

.email-send{
  display: block;
  border: none;
  text-decoration: none;
  font-size: 16px;
  background:rgb(71, 71, 71);
  color: white;
  border-radius: 16%;
  padding: 10px 22px;
  margin-left: 8px;
  margin-top: 10px;
  transition-property:background;
}
.email-send:hover{
  background:rgb(32, 32, 32);
  transition-duration: 200ms;
  cursor: pointer;
}

.footer-back{
  display: flex;
  justify-content: space-evenly;
  padding: 30px;
  background: #222222;
  text-align: left;
}
.footer-back p, .footer-back h3{
  font-weight: lighter;
  text-align: left;
  line-height: 4px;
  background: none;
  color: rgb(255, 255, 255);
}
.footer-back p{
  font-size: 12px;
}
.footer-back a{
  font-size: 12px;
  font-weight: lighter;
  text-align: left;
  line-height: 10px;
  background: none;
  color: rgb(255, 255, 255);
}

* {box-sizing:border-box}

.space{
  padding-left: 240px;
  padding-right: 240px;
}

@media only screen and (max-width: 1700px){
  .space{
    padding-left: 60px;
    padding-right: 60px;
  }
  .grid{
    gap: 80px 60px;
  }
  svg{
    width: 300px;
  }
  .content-right{
    margin-top: 120px;
  }
}

@media only screen and (max-width: 1300px){
  .project h3{
    font-size: 20px;
  }
  .project-content{
    padding: 28px;
  }
  .skills a{
    display: inline-block;
    font-size: 80%;
    width: 35px;
    line-height: 0px;
    margin-right: 2px;
    border-radius: 40%;
    font-size: 12px;
  }
  .space{
    padding-left: 60px;
    padding-right: 60px;
  }

  .grid{
    gap: 60px 40px;
  }
  .contact{
    grid-template-columns: 1fr;
  }
}
@media only screen and (max-width: 1000px){
  .header-content{
    /*display: block;*/
    padding-top: 160px;
  }
  .header-content h1{
    line-height: 38px;
    font-size: 40px;
  }
  .header-content h3{
    line-height: 38px;
    font-size: 20px;
  }
  .header-button{
    margin-top: 20px;
    
  }
  svg{
    width: 280px;
  }
  .content-right{
    margin-top: 40px;
    text-align: left;
  }

  nav{
    display: block;
    position: absolute;
    top: 50px;
    right: -700px;
    margin-top: 0px;
  }

  header{
    height: 78px;
  }

  .toggle{
    display: block;
    position: absolute;
    top: 10px;
    right: 60px;
    z-index: 2;
    cursor: pointer;
    width: 50px;
    height: 50px;
    margin: 8px;
    opacity: 0;
  }
  .hamburger{
      position: absolute;
      top: 10px;
      right: 60px;
      z-index: 1;
      width: 50px;
      height: 50px;
      padding: 8px;

      display: flex;
      align-items: center;
      justify-content: center;
  }
  .hamburger > div{
      position: relative;
      width: 100%;
      height: 2px;
      background: white;
      display: flex;
      align-items: center;
      justify-items: center;
      transition:all 400ms ease;
  }
  .hamburger > div::before,
  .hamburger > div::after{
      content: "";
      position: absolute;
      z-index: 1;
      top: -12px;
      width: 100%;
      height: 2px;
      background: inherit;
      
  }
  .hamburger > div::after{
      top: 12px;
  }

  .toggle:checked + .hamburger > div{
      transform: rotate(135deg);
  }
  .toggle:checked + .hamburger > div:before,
  .toggle:checked + .hamburger > div:after{
      top: 0;
      transform: rotate(90deg);
  }
  .toggle:checked ~ nav{
    transition: 220ms ease-out;
    display: block;
    position: absolute;
    top: 0px;
    right: 0px;
    background: #181818fb;
    margin: 0px;
    padding-right: 140px;
    padding-left: 20px;
    height: 100vh;
    margin-top: 78px;
  }
  .toggle:checked ~ nav > div{
    display: grid;
    position: relative;
  }
  .nav a{
    margin: 20px;
  }
  .logo{
    position: absolute;
    top: 0px;
  }

  .grid{
    grid-template-columns: 1fr 1fr;
  }
}
@media only screen and (max-width: 700px){
  .project h3{
    font-size: 34px;
  }
  .project-content{
    padding: 40px;
  }
  .skills a{
    display: inline-block;
    font-size: 80%;
    width: 35px;
    line-height: 0px;
    margin-right: 2px;
    border-radius: 40%;
    font-size: 12px;
  }

  .header-content{
    display: block;
    padding-top: 160px;
    text-align: center;
  }
  .header-content h1{
    line-height: 38px;
    font-size: 50px;
  }
  .header-content h3{
    line-height: 38px;
    font-size: 20px;
  }
  .header-button{
    margin-top: 40px;
    display: block;
    text-align: center;
  }
  svg{
    width: 450px;
  }
  .content-right{
    margin-top: 80px;
    text-align: center;
  }

  .space{
    padding-left: 20px;
    padding-right: 20px;
  }
  .grid{
    grid-template-columns: 1fr;
  }

  .contact{
    gap: 60px;

    padding-top: 200px;
    padding-bottom: 100px;

    color: rgb(255, 255, 255);

  }

}

